--- a/helpline.html
+++ b/helpline.html
@@ -164,14 +164,14 @@
             <a href="tel:100">Call Police (100)</a>
             <a href="tel:1098">Child Helpline (1098)</a>
             <a href="tel:181">Women Helpline (181)</a>
-            <a href="tel:1930">Women Helpline (1930)</a>
+            <a href="tel:1930">National Cyber Crime Portal(1930)</a>
         </div>
     </div>
 
     <div class="contact-section">
         <h2>Frequently Asked Questions (FAQs)</h2>
         <p>Find answers to common questions about NDSAW and our services.</p>
-        <a href="faq.html">View FAQs</a>
+        <a href="FAQ.html">View FAQs</a>
     </div>
 </div>
 
