--- a/services.html
+++ b/services.html
@@ -102,34 +102,24 @@
         <div class="logo-text">NDSAW</div>
     </div>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp   &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
   <nav>
-            <ul class="nav-links">
-                <li><a href="community post.html">Notice Board</a></li>
-                <li><a href="officer's portal.html">Officer's Portal</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="operations.html">Operations</a></li>
-                <li><a href="about.html">Intelligence Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-        </nav>
+            
 </header>
 
 <div class="content">
     <h1>Our Intelligence Services</h1>
     <p>
-        At NDSAW, we are committed to providing top-notch intelligence services to safeguard the nation's interests. Our 
-        services are built on precision, expertise, and cutting-edge technology to address a wide array of security and 
-        intelligence challenges.
+        At NDSAW, we are committed to provide different types of services and advices for diffrent problems to both teens and students.
     </p>
 
     <h2 style="color: #fff;">Key Services</h2>
     <ul class="service-list">
-        <li><strong>Threat Analysis:</strong> Identifying and assessing risks to national security.</li>
+        <li><strong>Threat Analysis:</strong> Identifying and assessing risks to security.</li>
         <li><strong>Cyber Intelligence:</strong> Monitoring and preventing cyber threats and breaches.</li>
-        <li><strong>Counter-Terrorism Operations:</strong> Strategic operations to neutralize threats.</li>
-        <li><strong>Data Security:</strong> Safeguarding critical information from unauthorized access.</li>
-        <li><strong>Field Surveillance:</strong> Covert operations for intelligence gathering.</li>
-        <li><strong>Forensic Analysis:</strong> Detailed analysis to support investigations.</li>
-        <li><strong>Real-time Monitoring:</strong> 24/7 surveillance and tracking of potential risks.</li>
+         <li><strong>Detectives for hire:</strong> Detailed investigations done by our detectives whome can be contacted by the students (GHS) or someone else for help.</li>
+        <li><strong>Data Security:</strong> Safeguarding important and private information from unauthorized access.</li>
+        <li><strong>Field Surveillance:</strong> Secret operations.</li>
+        <li><strong>Anti Cyber Bullying or Harresment:</strong> Abolishing bullying and harresment, you tell us...we will take care ethically!</li>
+        <li><strong>Security and Protection Services:</strong> Protection services to students or minors along with other key figures from potential risks.</li>
     </ul>
 </div>
 
