--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     
     <ul class="nav-links">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="login.html">Officer's Portal</a></li>
+                <li><a href="login final.html">Officer's Portal</a></li>
                 <li><a href="helpline.html">Helpline</a></li>                                   
                 <li><a href="tip.html">Submit an anonymous Tip!</a></li>
                 <li><a href="incident.html">Report Incident</a></li>
