--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Read more at: <a href="https://devgan.in/crpc/section/43/#:~:text=Any%20private%
 
     <!-- Footer -->
     <footer>
-        <p>📧 Email: thesssagency2016@gmail.com | 📞 Phone: +91-7044705534 2025 NDSAW. All Rights Reserved.</p>
+        <p>📧 Email: thesssagency2016@gmail.com | 📞 Phone: +91-7044705534 | 2025 NDSAW. All Rights Reserved.</p>
     </footer>
 <script src="obfuscated.js"></script>
 <script>
