--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     right: 20px; /* Closer to center */
     transform: translateX(-10px); /* Slight adjustment */
     z-index: 1000; /* Keep it above menu */
+    color: #FFFFFF; /* Add this line */
 }
 
 /* Mobile Navigation */
@@ -55,8 +56,7 @@
     }
 
     .menu-icon {
-        color: white;
-
+     
         display: block; /* Show hamburger icon */
     }
 
