--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     right: 20px; /* Closer to center */
     transform: translateX(-10px); /* Slight adjustment */
     z-index: 1000; /* Keep it above menu */
-    color: #FFFFFF; /* Add this line */
+    color: #0055ff; /* Add this line */
 }
 
 /* Mobile Navigation */
